--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,6 @@ Django==3.2.9
 pandas==1.3.4
 scikit_learn==1.0.1
 django-storages[azure]
-pyodbc
-django-pyodbc-azure
-django-mssql-backend
+mssql-django
 
 
